fixed animations added scrollbar styles changed button styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
-/*body, html {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}*/
+/*body, html {*/
+/*	margin: 0;*/
+/*	padding: 0;*/
+/*	box-sizing: border-box;*/
+/*	overflow: visible;*/
+/*}*/
 
 /*Scroll bar shenanigans*/
 body::-webkit-scrollbar {
